<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    android:textIsSelectable="true"
    android:background="@color/windowBackground"
    tools:context=".MovieDetailFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                tools:context=".MovieDetailFragment">
        <RelativeLayout
            android:id="@+id/movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding">
            <ImageView
                android:id="@+id/imageViewMoviePoster"
                android:layout_width="185dp"
                android:layout_height="277dp"
                android:src="@drawable/movie_example"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageViewMoviePoster"
                android:layout_toEndOf="@+id/imageViewMoviePoster">
                <TextView
                    style="@style/TitleMovieDetail"
                    android:id="@+id/labelMovieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_title_movie"/>
                <TextView
                    style="@style/ContentMovieDetail"
                    android:id="@+id/valueMovieName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Movie Name"/>
                <TextView
                    style="@style/TitleMovieDetail"
                    android:id="@+id/labelMovieRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_release_date_movie"/>
                <TextView
                    style="@style/ContentMovieDetail"
                    android:id="@+id/valueMovieRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:text="Movie Ranting"/>

                <TextView
                    style="@style/TitleMovieDetail"
                    android:id="@+id/labelMovieRanting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_vote_average_movie"/>
                <TextView
                    style="@style/ContentMovieDetail"
                    android:id="@+id/valueMovieRanting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Movie Ranting"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:numStars="1"
                    android:id="@+id/ratingBar"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/synopsisLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewMoviePoster"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">
                <TextView
                    style="@style/TitleMovieDetail"
                    android:id="@+id/labelMovieSynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_overview_movie"/>
                <TextView
                    style="@style/ContentMovieDetail"
                    android:id="@+id/textViewMovieSynopsis"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Movie Synopsis 2 trhursjygf jyjghmjg gfjmghjd jhgjh g jg mnb n m hgjkmkmk hgjkuyk yuikuyk,mjhn,mn mvn,m, mn,jh,k kyujk yrtygrebe wrewtvrdg fcrtvtrh utrjh  tuhtg nhg thtrjhn  yjnhgn  tjhngfn  yhtgfjn reygf t"
                    android:gravity="fill_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/trailersLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/synopsisLayout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">
                <TextView
                    style="@style/TitleMovieDetail"
                    android:id="@+id/labelMovieTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_trailers"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reviewsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trailersLayout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">
                <TextView
                    style="@style/TitleMovieDetail"
                    android:id="@+id/labelMovieReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_reviews"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
